# Solar-intelligence-FastAPI

./: .gitignore  ADMIN_PAGES_MIGRATION_PLAN.md  ADMIN_SERVICE_COMPLETE.md  AGENT_ACCESS_COMPLETE.md  AGENT_ACCESS_FIX.md  AGENT_MEMORY_ISSUE.md  AGENT_SERVICE_COMPLETE.md  ALEMBIC_GUIDE.md  API_ENDPOINTS_SUMMARY.txt  AUTH_ENDPOINTS_COMPLETE.md  AUTH_FEATURES_COMPLETE.md  BACKEND_AUDIT_COMPLETE.md  CHAT_PROCESSING_COMPLETE.md  CI_CD_SETUP.md  CONNECTION_POOLING_COMPLETE.md  CONVERSATION_ENDPOINTS_COMPLETE.md  CONVERSATION_SERVICE_COMPLETE.md  CONVERSATION_TESTS_COMPLETE.md  CRITICAL_FIX_COMPLETE.md  DATABASE_SCHEMA_FINAL.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOY_WINDOWS.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  Dockerfile.fastapi  EMAIL_AUTOMATION_GUIDE.md  FASTAPI_QUICKSTART.md  FINAL_CLEANUP_SUMMARY.md  FORM_VALIDATION_P1_COMPLETE.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  LANDING_PAGE_REFACTORING_COMPLETE.md  LANDING_REACT_MIGRATION_READINESS.md  LANDING_REFACTORING_SUCCESS.md  LOADING_TOAST_AUDIT_COMPLETE.md  MATERIAL_DESIGN_3_IMPLEMENTATION.md  MIGRATION_CLEANUP_GUIDE.md  MIGRATION_STATUS.md  (+63 more)
.claude/: settings.local.json
.github/: PIPELINE_STATUS.md
app/: config.py  extensions.py
deployment/: AWS_DATABASE_SETUP.md
docs/: ARTIFACT_PANEL_IMPLEMENTATION.md  ASYNC_DEPLOYMENT_GUIDE.md  CHATBOT_MODULARIZATION_PLAN.md  CLEAN_ARCHITECTURE_IMPLEMENTATION_PLAN.md  CRITICAL_FIXES_APPLIED.md  CSS_CONFLICT_FIX.md  CSS_FIX_COMPLETE_SUMMARY.md  DATABASE_MIGRATION_PLAN.md  DATABASE_SETUP.md  IMPLEMENTATION_PLAN.md  (+35 more)
(+292 files in other folders)
